<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myShoe"
            type="com.udacity.shoestore.models.Shoe" />

        <import type="com.udacity.utils.converters.DoubleConverter" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{@string/shoe_name+" : "+myShoe.name}'
                style="@style/normalText"
                tools:text="@string/shoe_name" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text='@{@string/description+" : "+myShoe.description}'
                style="@style/normalText"
                tools:text="@string/description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text='@{@string/company+" : "+myShoe.company}'
                android:textSize="18sp"
                tools:text="@string/company" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text='@{@string/shoe_size+" : "+DoubleConverter.doubleToString(myShoe.size)}'
                style="@style/normalText"
                tools:text="@string/shoe_size" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>